--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^5.0.0-beta.30",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "recharts": "^3.6.0",
     "shadcn": "^3.6.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
